DEV-4 Modernize codebase: - Structured Concurrency - Virtual Threads - JSpecify